# DirectXRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  Changelog.md  NOTE.md  README.md  build.bat  remake.bat  run.bat
Engine/: main.cpp
Engine/Core/: Application.cpp  Application.h  Timer.cpp  WindowManager.h
Engine/ECS/: Component.h  Registry.h
Engine/ECS/Components/: CameraComponent.cpp  CameraComponent.h  LightComponent.h  MaterialComponent.h  MeshComponent.h  TransformComponent.cpp  TransformComponent.h
Engine/ECS/Systems/: CameraManager.h  InputSystem.h  RenderSystem.cpp  RenderSystem.h
Engine/Rendering/: GUIManager.cpp  GUIManager.h  GraphicsDeviceManager.cpp  GraphicsDeviceManager.h  LightingManager.cpp  LightingManager.h  RenderPipelineManager.cpp  RenderPipelineManager.h
Engine/Resources/: MeshManager.h  ResourceManager.cpp  ShaderManager.cpp  ShaderManager.h
Engine/Scene/: Scene.cpp  Scene.h
Engine/Shaders/: pixelShader.hlsl
shaders/: PixelShader.cso  VertexShader.cso  pixelShader.hlsl  vertexShader.hlsl
src/: Application.cpp  Application.h  Buffers.h  Registry.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  System.h  Vertex.h  main.cpp
src/Components/: CameraComponent.h  LightComponent.h  MaterialComponent.h  MeshComponent.h  TransformComponent.h
src/Core/: Timer.h  WindowManager.cpp
src/Graphics/: GUIManager.cpp  GUIManager.h  GraphicsDeviceManager.cpp  RenderPipelineManager.cpp  RenderPipelineManager.h
src/Managers/: CameraManager.cpp  CameraManager.h  LightingManager.cpp  LightingManager.h  MeshManager.cpp  MeshManager.h  ShaderManager.cpp  ShaderManager.h
src/Systems/: InputSystem.cpp  InputSystem.h  RenderSystem.cpp  RenderSystem.h
tools/: build.bat
